--- a/view/goodsDetail.html
+++ b/view/goodsDetail.html
@@ -41,40 +41,54 @@
             <div class="goods-info">
                 <input type="hidden" id="standard" value="">
                 <div class="desc">
-                    <span class="name">辣椒炒肉</span>
+                    <span class="name">【辣椒炒肉】</span>
                     <span class="simple_desc"></span>
                 </div>
                 <div class="price">
                     <span class="inventory-area-wrap">
-                        <span class="inventory-area">近期共售出：&nbsp;<span class="inventory">10000</span>份</span>
+                        <span class="inventory-area">月售<span class="inventory">100</span>份</span>
+                        <span class="inventory-area">好评率<span class="inventory">100%</span>
                     </span>
                 </div>
                 <div class="dining-area">
-                    <div class="dining-list">
-
-                        <span class="minus hidden" data-id=""><i class="icon iconfont">&#xe6d0;</i></span><span class="goods-num hidden" data-id="">0</span><span class="add" data-id=""><i class="icon iconfont">&#xe6ce;</i></span>
-                                        </div>
+                    <div class="dining-list" style="display: none;">
+                        <span class="minus" data-id="">
+                            <i class="icon iconfont">&#xe6d0;</i>
+                        </span>
+                        <span class="goods-num" data-id="">1</span>
+                        <span class="add" data-id="">
+                            <i class="icon iconfont">&#xe6ce;</i>
+                        </span>
+                    </div>
+                    <div class="dining-btn">
+                        <button type="button">加入购物车</button>
+                    </div>
                 </div>
-                                <div class="price">
-                    <span class="price-goods"></span><i class="icon iconfont">&#xe604;</i><span class="price-value" data-price=""></span>/份
-                    <span class="ori-price-info">原价<i class="icon iconfont">&#xe604;</i><span class="ori-price"></span></span>
+                <div class="price">
+                    <span class="price-goods"></span><i class="icon iconfont">&#xe604;</i><span class="price-value" data-price="">12</span>/份
+                    <span class="ori-price-info">原价<i class="icon iconfont">&#xe604;</i><span class="ori-price">13.5</span></span>
                 </div>
 
             </div>
             <!--多规格时-->
-                        <!--运费信息-->
+            <!--运费信息-->
             <div class="freight-info">
                 <span class="freight-info-title">运费 : </span><span class="freight-info-desc">免运费</span>
             </div>
             <div class="goodsDetail-info-wrap clearfix" id="self">
                 <div class="goodsDetail-nav-wrap">
                     <div class="goodsDetail-info-nav clearfix">
-                        <a href="#self" class="item buy-area active"  data-num=1>商品详情</a>
+                        <a href="#self" class="item buy-area active"  data-num=1>商品描述</a>
                     </div>
                 </div>
 
                 <!--商品详情-->
-                            </div>
+                <div class="goodsDetail-desc">
+                    <p class="text-muted">
+                    温馨提示：图片仅供参考，请以实物为准；高峰时段及恶劣环境，请提前下单。
+                    </p>
+                </div>
+            </div>
         </div>
         <!--页面脚部-->
         <div class="bottomNav cf">
