--- a/view/userCenter.html
+++ b/view/userCenter.html
@@ -30,16 +30,32 @@
                 <div class="head-image"><img src="http://wx.qlogo.cn/mmopen/u2hicLTTQDgb1xvekwpDvGz8l4Z3lemetEl0aJ1J3R0sd9kR699aNPZ7fg78Hj8hl6E8ficxZ4SWbc1tDoRSXOjWnIMSrK2Qow/132"></div>
                 <div class="myinfo" style="height:40px;">
                     <div>哎呦喂</div>
-                    <a class="my-account">余额：<span class="account-num">10.00元</span>
+                    <!-- <a class="my-account">余额：<span class="account-num">10.00元</span>
                         <a class="account-recharge" href="./pay.html">充值优惠</a>
                     </a>
                     <a class="account-recharge" style="display: none;" href="./index.php?c=dining&a=withdrawMoney">立即提现</a>
-                    </a>
+                    </a> -->
 
                 </div>
             </div>
+            <div class="grid-tab">
+                <a href="./myAccount.html" class="grid-list">
+                    <p>
+                        <span class="num" style="color: rgb(255, 95, 62);">10.00</span>
+                        <span class="txt" style="color: rgb(255, 95, 62);">元</span>
+                    </p>
+                    <p class="my-account">余额</p>
+                </a>
+                <a href="./myJifen.html" class="grid-list">
+                    <p>
+                        <span class="num" style="color: rgb(106, 194, 11);">0</span>
+                        <span class="txt" style="color: rgb(106, 194, 11);">个</span>
+                    </p>
+                    <p class="my-point">积分</p>
+                </a>
+            </div>
             <!--订单功能区-->
-            <div class="order-area">
+            <!-- <div class="order-area">
                 <div class="cf all-order clearfix" style="display: none;">
                     <a href="javascript:;" class="left">
                         <i class="icon iconfont">&#xe644;</i><span>美食订单</span>
@@ -70,7 +86,7 @@
                         <span class="goods-num"><span>0</span></span>
                     </a>
                     </div>
-            </div>
+            </div> -->
 
 
              <!-- 我的订单 -->
@@ -98,14 +114,14 @@
                 </div>
             </div>
             <!--积分提现-->
-
+<!--
             <div class="user-area user-area-2">
                 <div class="user-info">
-                     <a href="./orderList.html">
+                     <a href="./myJifen.html">
                         <i class="icon iconfont icon-jifen"></i>我的积分<i class="icon iconfont arrow">&#xe654;</i>
                     </a>
                 </div>
-            </div>
+            </div> -->
             <!--推广页面-->
             <div class="user-area user-area-2">
                 <div class="user-info">
