--- a/css/goodsDetail.css
+++ b/css/goodsDetail.css
@@ -1,8 +1,3 @@
-/******************************
- ------商品详情页面样式--------
- --------author:jjhu-----------
- ------date:2015-07-24---------
- ******************************/
 .content-goodsDetail{
 	background: #f3f3f3;
 }
@@ -547,6 +542,16 @@ button.close i{
     position: absolute;
     right: 20px;
     z-index: 9;
+    margin-top:4px;
+}
+.dining-area .dining-btn button{
+    border-radius: 20px;
+    border:none;
+    font-size: 12px;
+    line-height: 12px;
+    color: #fff;
+    padding: 5px 7px;
+    background-color:#FF5C00;
 }
 .dining-area .dining-list{
 	border-top:1px solid #eee;
@@ -605,4 +610,8 @@ button.close i{
 	font-size:20px;
 	position:relative;
 	top:3px;
+}
+/*商品描述*/
+.goodsDetail-desc{
+    padding: 10px;
 }
