--- a/view/pay.html
+++ b/view/pay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <title>我的余额</title>
+    <title>充值</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
@@ -26,7 +26,7 @@
                 <a class="header-left" href="javascript:window.history.go(-1);">
                     <i class="icon iconfont">&#xe62a;</i>
                 </a>
-                我的余额
+                充值
             </div>
             <div class="img-area">
                 <img class="recharge-img" src="../image/recharge_top.jpg">
@@ -54,7 +54,9 @@
 
                 <div class="info">
                  </div>
-                <div class="recharge-btn" data-name="">立即充值</div>
+                <div  data-name="" style="text-align: center;">
+                    <div class="recharge-btn">立即充值</div>
+                </div>
             </div>
 
         </div>
