--- a/view/estimate.html
+++ b/view/estimate.html
@@ -74,6 +74,10 @@
             border-radius: 15px;
             margin:0 auto;
         }
+         .zan .zan-btn-area.already-zan{
+            color: #EA6868;
+            border: 1px solid;
+         }
 
     </style>
 </head>
@@ -97,6 +101,14 @@
                     </div>
                      <div class="zan">
                         <div class="zan-btn-area already-zan"><i class="icon iconfont zan-item "></i> 赞</div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="seller">
+                    <img class="img" src="https://fuss10.elemecdn.com/c/f5/d0b0f2fc83f3ac3e4a0cfae891256png.png?imageMogr/format/webp/thumbnail/!60x60r/gravity/Center/crop/60x60/">
+                    <div class="info">
+                        正新鸡排(华凯广场店)
                     </div>
                 </div>
             </div>
