--- a/view/orderList.html
+++ b/view/orderList.html
@@ -67,7 +67,7 @@
                         <span class="dining-price">40</span>
                     </div>
                                 <a href="./index.php?c=dining&a=orderDetail&oid='+id+'" class="order-find btn">订单追踪<a>
-                                <a href="./index.php?c=dining&a=redPacket&type=0&rid='+rid+'" class="order-share btn">分享红包<a>
+                                <a href="./redPacket.html?c=dining&a=redPacket&type=0&rid='+rid+'" class="order-share btn">分享红包<a>
                                 <a href="tel:'+obj.shop_phone+'" class="call-sender-btn btn">一键催单<a>
                                 <div class="shop-discount"><span class="item">折扣优惠&nbsp;</span><span class="item-price">- 1</span></div>
                                 <div class="dining-last">
@@ -318,7 +318,7 @@
                         <span class="dining-price">40</span>
                     </div>
                                 <a href="./index.php?c=dining&a=orderDetail&oid='+id+'" class="order-find btn">订单追踪<a>
-                                <a href="./index.php?c=dining&a=redPacket&type=0&rid='+rid+'" class="order-share btn">分享红包<a>
+                                <a href="./redPacket1.html?c=dining&a=redPacket&type=0&rid='+rid+'" class="order-share btn">分享红包<a>
                                 <a href="tel:'+obj.shop_phone+'" class="call-sender-btn btn">一键催单<a>
                                 <div class="shop-discount"><span class="item">折扣优惠&nbsp;</span><span class="item-price">- 1</span></div>
                                 <div class="dining-last">
