--- a/view/redPacket.html
+++ b/view/redPacket.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <title>订单管理</title>
+    <title>红包玩法</title>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
@@ -14,160 +15,59 @@
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
     <link rel="stylesheet"  href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/userBase.css">
 
-    <link rel="stylesheet"  href="../css/orderList.css">
+    <link rel="stylesheet"  href="../css/redPacket.css">
 </head>
 
 <body>
     <!--主容器-->
     <div id="container" class="container-fluid">
-        <div class="head-nav">
-            <span class="head-item" data-status="">全部</span>
-            <!-- <span class="head-item " data-status="0">待付款</span> -->
-            <span class="head-item " data-status="3"><!-- 已接单 --> 正在做饭</span>
-            <span class="head-item " data-status="4"><!-- 送餐中 --> 正在配送</span>
-            <span class="head-item active" data-status="5"><!-- 已完成 -->完成配送</span>
-        </div>
-        <div class="content-wrap">
-           <div class="order-list-wrap" data-id="5">
-                <div class="order-list order-item">
-                    <span class="left-name">订单编号</span>
-                    <a href="./index.php?c=dining&a=orderDetail&oid='+id+'" class="order-text">
-                        <span class="order-num">20040606<span class="status-color">交易成功</span></span>
-                    </a>
-                </div>
-                <div class="order-list order-item">
-                    <span class="left-name">订餐时间</span>
-                        <span class="order-text">8:00-12:00,14:00-16:00</span>
-                </div>
-                <div class="order-list time order-item">
-                    <span class="left-name">送达时间</span>
-                    <span class="order-text">8:20</span>
-                    <span class="left-name"><i class="icon iconfont">&#xe6f5;</i>送达计时</span><span data-time="'+obj.estimate_time+'" class="order-time order-estimate-time last-item left-time">00:00:00</span>
-                </div>
-                <div class="order-list order-item">
-                    <span class="left-name">备注信息</span>
-                    <span class="order-text limit-text message">老板，饿死了，快点送过来</span>
-                </div>
-                <div class="order-list shop order-last">
-                    <span class="left-name"><i class="icon iconfont">&#xe710;</i>商家名称</span>
-                    <span class="shop-name limit-text last-item">周黑鸭</span>
-                </div>
-                <div class="order-list sender order-last '+sender_class+'">
-                    <span class="left-name"><i class="icon iconfont">&#xe710;</i>商家电话</span>
-                    <span class="order-sender active limit-text last-item"><a href="tel:'+shop_phone+'">13533338999</a></span>
-                </div>
-                <div class="order-list dining order-last">
-                    <span class="left-name"><i class="icon iconfont">&#xe66a;</i>配送餐品</span>
-                    <div class="dining-list">
-                        <span class="dining-name">鸭脖</span>
-                        <span class="dining-count"><i class="icon iconfont">&#xe614;</i>1</span>
-                        <span class="dining-price">30.9</span>
-                    </div>
-                    <a href="./index.php?c=dining&a=orderDetail&oid='+id+'" class="order-find btn">订单追踪<a>
-                    <a href="./redPacket.html?c=dining&a=redPacket&type=0&rid='+rid+'" class="order-share btn">分享红包<a>
-                    <a href="./index.php?c=dining&a=userComplain&type=0&oid='+id+'" class="complain-btn btn">我要投诉<a>
-                    <div class="shop-discount">
-                        <span class="item">折扣优惠&nbsp;</span>
-                        <span class="item-price">- 8</span>
-                    </div>
-                    <div class="dining-last">
-                        <i class="icon iconfont">&#xe604;</i>
-                        <span class="total-price">21.9</span>
-                        <span class="person-count">（1人餐）</span>
-                    </div>
-                    <div class="zan-area">
-                        <div class="zan-title">给骑手点赞</div>
-                            <div class="demo zan-btn-area already-zan">
-                                <i class="icon iconfont zan-item ">&#xe760;</i> 赞
-                            </div>
+        <!--页面头部-->
+        <!--主体内容-->
+        <div id="content">
+                        <div class="redpacket-area">
+                <div class="redpacket-image">
+                                        <img src="../image/redpacket-unwin.jpg" alt="" />
+                                        <div class="operation">
+                        <div data-rid="13" class="receive-btn ">立即领取</div>
+                        <div class="share-btn">立即分享</div>
                     </div>
                 </div>
-                <div class="order-status">
-                    <i class="icon iconfont">&#xe7c7;</i><span class="status-info">此订单已经处理完毕</span>
-                    <a href="./estimate.html" class="complain-btn btn">我要评价</a>
-                </div>
+
             </div>
-            <div class="order-list-wrap" data-id="5">
-                <div class="order-list order-item">
-                    <span class="left-name">订单编号</span>
-                    <a href="./index.php?c=dining&a=orderDetail&oid='+id+'" class="order-text">
-                        <span class="order-num">20040606<span class="status-color">交易成功</span></span>
-                    </a>
+            <div class="redpacket-list">
+                <div class="button-group-list">
+                    <div class="packet-list-button list-btn-item active">领取列表</div>
+                    <div class="active-list-button list-btn-item">活动规则</div>
                 </div>
-                <div class="order-list order-item">
-                    <span class="left-name">订餐时间</span>
-                        <span class="order-text">8:00-12:00,14:00-16:00</span>
-                </div>
-                <div class="order-list time order-item">
-                    <span class="left-name">送达时间</span>
-                    <span class="order-text">8:20</span>
-                    <span class="left-name"><i class="icon iconfont">&#xe6f5;</i>送达计时</span><span data-time="'+obj.estimate_time+'" class="order-time order-estimate-time last-item left-time">00:00:00</span>
-                </div>
-                <div class="order-list order-item">
-                    <span class="left-name">备注信息</span>
-                    <span class="order-text limit-text message">老板，饿死了，快点送过来</span>
-                </div>
-                <div class="order-list shop order-last">
-                    <span class="left-name"><i class="icon iconfont">&#xe710;</i>商家名称</span>
-                    <span class="shop-name limit-text last-item">必胜客</span>
-                </div>
-                <div class="order-list sender order-last '+sender_class+'">
-                    <span class="left-name"><i class="icon iconfont">&#xe710;</i>商家电话</span>
-                    <span class="order-sender active limit-text last-item"><a href="tel:'+shop_phone+'">13533338999</a></span>
-                </div>
-                <div class="order-list dining order-last">
-                    <span class="left-name"><i class="icon iconfont">&#xe66a;</i>配送餐品</span>
-                    <div class="dining-list">
-                        <span class="dining-name">芝士披萨</span>
-                        <span class="dining-count"><i class="icon iconfont">&#xe614;</i>1</span>
-                        <span class="dining-price">68</span>
-                    </div>
-                    <a href="./index.php?c=dining&a=orderDetail&oid='+id+'" class="order-find btn">订单追踪<a>
+                <div class="packet-area">
+                    <div class="packet-list-area">
 
-                    <a href="javascript:;" class="order-share-over btn">分享红包<a>
-
-                    <a href="javascript:;" class="complain-cancel-btn btn">取消投诉<a>
-
-                    <div class="shop-discount">
-                        <span class="item">满减优惠&nbsp;</span>
-                            <span class="item-price">- 10</span></div>
-                    <div class="dining-last">
-                        <i class="icon iconfont">&#xe604;</i>
-                        <span class="total-price">78</span>
-                        <span class="person-count">（2人餐）</span>
+                                                啊哦，暂无领取记录，快去领红包吧
+                                            </div>
+                    <div class="packet-rule-area">
+                        规则一：红包自己不能领取，红包只能分享给好友，每人只能领取一次红包
                     </div>
-                    <div class="zan-area">
-                        <div class="zan-title">给骑手点赞</div>
-                        <div class="demo zan-btn-area no-zan"><i class="icon iconfont zan-item ">&#xe760;</i> 赞</div>
-                    </div>
-                </div>
-                <div class="order-status">
-                    <i class="icon iconfont">&#xe7c7;</i><span class="status-info">此订单已经处理完毕</span>
                 </div>
             </div>
 
-            <div id="get-more"></div>
         </div>
     </div>
-    <!--客户的底部导航-->
-<div id="bottom-nav">
-    <a href="./index.html" class="nav-list ">
-        <span class="nav-icon"><i class="icon iconfont">&#xe758;</i></span>
-        <span class="nav-name">首页</span>
-    </a>
-    <a href="./shopList.html" class="nav-list ">
-        <span class="nav-icon"><i class="icon iconfont">&#xe63a;</i></span>
-        <span class="nav-name">私厨</span>
-    </a>
-    <a href="./userCenter.html" class="nav-list ">
-        <span class="nav-icon"><i class="icon iconfont">&#xe626;</i></span>
-        <span class="nav-name">我的</span>
-    </a>
-</div>
+    <div class="guide">
+        <div class="guide-content">
+            <img src="../image/guide.png" alt="" class="guide-image" />
+        </div>
+    </div>
+    <div class="follow-wechat-number">
+        <div class="follow-image-area">
+            <div class="follow-info">关注领红包</div>
+            <img class="follow-image" src="../image/wechat-qrcode.jpg"/>
+            <div class="follow-title">快点识别图中二维码，关注我们吧！</div>
+        </div>
+    </div>
     <!--提示框-->
-    <!-- 模态框（Modal） 提示框-->
+<!-- 模态框（Modal） 提示框-->
 <div class="modal fade" id="myAlertModal" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -198,14 +98,14 @@
 <!-- 加载中操作转圈提示 -->
 <div id="loadingDialog" class="my-dialog">
     <div class="my-dialog-body">
-        <img src="../image/loading.gif">
+        <img src="./themes/image/loading.gif">
     </div>
 </div>
 
 <!--页面即将跳转提示框-->
 <div id="skipDialog" class="my-dialog">
     <div class="my-dialog-body">
-        <img src="../image/x-loading.gif">
+        <img src="./themes/image/x-loading.gif">
         <div class="desc-text">页面即将跳转，请稍等...</div>
     </div>
 </div>
@@ -402,7 +302,7 @@
 <div class="modal fade" id="loading" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel">
     <div style="z-index: 9999;height: 100%;margin: 0 auto;text-align: center;line-height: 600px;">
-        <img height="60px" src="../image/loading.gif">
+        <img height="60px" src="./themes/image/loading.gif">
     </div>
 </div><!-- /.modal -->
 
@@ -423,10 +323,99 @@
         <a class="btn-cancel-oper btn-right" href="javascript:;">取消</a>
     </div>
 </div>    <!--公用js文件-->
-<script src="../js/jquery-1.11.0.js"></script>
-
-<script src="../js/page.js"></script>
+    <script src="../js/jquery-1.11.0.js"></script>
 <script src="../js/common.js"></script>
-<script type="text/javascript" src="../js/orderList.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+ <script type="text/javascript" src="../js/redPacket.js"></script>
+<script type="text/javascript" src="../js/jweixin-1.0.0.js"></script>
+<script>
+    /*
+     **** 微信分享
+     */
+    wx.config({
+        debug: false,
+        appId: 'wx7a2584bd028d844c',
+        timestamp: '1517964203',
+        nonceStr: 'HmJqgLA8E0g04zkW',
+        signature: 'd8933920c2520ff6c6123adc4e14c2e4108a85ad',
+        jsApiList: ['onMenuShareTimeline','onMenuShareAppMessage','hideMenuItems'
+            // 所有要调用的 API 都要加到这个列表中
+        ]
+    });
+    var title = '领取饭票，购美食';
+    var link =  'https://cjb.huimaibuy.com/index.php?c=dining&a=redPacket&type=0&rid=13';
+    var imgUrl = 'https://cjb.huimaibuy.com/template/front/dining/ma16001/image/redpack-share.jpg';
+    var desc = "超级邦饭票新玩法,领取饭票，购美食！";
+    wx.ready(function () {
+        // 在这里调用 API
+        //分享到朋友圈
+        wx.onMenuShareTimeline({
+            title: title, // 分享标题
+            link: link, // 分享链接
+            imgUrl: imgUrl, // 分享图标
+            success: function () {
+                // 用户确认分享后执行的回调函数
+                //window.location.href = "https://cjb.huimaibuy.com/index.php?c=activity&a=userShare&openId=";
+
+            },
+            cancel: function () {
+                // 用户取消分享后执行的回调函数
+
+            }
+        });
+        //发送给朋友
+        wx.onMenuShareAppMessage({
+            title: title, // 分享标题
+            desc: desc, // 分享描述
+            link: link, // 分享链接
+            imgUrl: imgUrl, // 分享图标
+            type: 'link', // 分享类型,music、video或link，不填默认为link
+            dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+            success: function () {
+                // 用户确认分享后执行的回调函数
+            },
+            cancel: function () {
+                // 用户取消分享后执行的回调函数
+            }
+        });
+
+        //隐藏的菜单
+        wx.hideMenuItems({
+            menuList: ["menuItem:copyUrl",
+                        //"menuItem:share:appMessage",
+                        "menuItem:share:timeline",
+                        "menuItem:openWithQQBrowser",
+                        "menuItem:openWithSafari",
+                        "menuItem:share:qq",
+                        "menuItem:favorite",
+                        "menuItem:share:weiboApp",
+                        "menuItem:share:email",
+                        "menuItem:originPage"] // 要隐藏的菜单项，只能隐藏“传播类”和“保护类”按钮，所有menu项见附录3
+            /**
+             传播类
+             发送给朋友: "menuItem:share:appMessage"
+             分享到朋友圈: "menuItem:share:timeline"
+             分享到QQ: "menuItem:share:qq"
+             分享到Weibo: "menuItem:share:weiboApp"
+             收藏: "menuItem:favorite"
+             分享到FB: "menuItem:share:facebook"
+             分享到 QQ 空间/menuItem:share:QZone
+
+             保护类
+             编辑标签: "menuItem:editTag"
+             删除: "menuItem:delete"
+             复制链接: "menuItem:copyUrl"
+             原网页: "menuItem:originPage"
+             阅读模式: "menuItem:readMode"
+             在QQ浏览器中打开: "menuItem:openWithQQBrowser"
+             在Safari中打开: "menuItem:openWithSafari"
+             邮件: "menuItem:share:email"
+             一些特殊公众号: "menuItem:share:brand"**/
+
+        });
+    });
+</script>
+
+
 </body>
 </html>
